<resources>
    <string name="app_name">IMC</string>
    <string name="calculadora_imc">Calculadora IMC</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="hint_peso">Ex: 88,5 kg</string>
    <string name="hint_altura">Ex: 1,85 m</string>
    <string name="sexo">Sexo</string>

    <string name="hint_sexo">Selecione o sexo</string>
    <string name="label_feminino">Feminino</string>
    <string name="label_masculino">Masculino</string>
    <string name="hint_resultado">20,1</string>
    <string name="hint_resultado_mensagem">Peso Ideal</string>
    <string name="desenvolvido_por_rafael">Desenvolvido por Rafael</string>
    <string name="abaixo_peso">Abaixo do peso</string>
</resources>
