<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
            android:text="@string/calculadora_imc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginTop="24dp"
            android:textSize="30sp" android:gravity="center_horizontal"/>
    <TextView
            style="@style/label_formulario"
            android:text="@string/peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtPeso" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:hint="@string/hint_peso" android:autofillHints=""/>
    <TextView
            android:text="@string/altura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/edtPeso" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@+id/edtPeso"
            android:textSize="20sp" app:layout_constraintEnd_toEndOf="@+id/edtPeso" style="@style/label_formulario"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/edtAltura"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="@+id/textView4"
            android:hint="@string/hint_altura"/>
    <TextView
            android:text="@string/sexo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/edtAltura" app:layout_constraintStart_toStartOf="@+id/edtAltura"
            android:layout_marginTop="24dp"
            android:textSize="20sp" app:layout_constraintEnd_toEndOf="@+id/edtAltura" style="@style/label_formulario"/>
    <Spinner
            android:entries="@array/sexos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spnSexo"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/spnSexo" app:layout_constraintStart_toStartOf="@+id/spnSexo"
            app:layout_constraintEnd_toEndOf="@+id/spnSexo"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textSize="20sp"/>
    <Button
            android:text="@string/limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpar" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
            app:layout_constraintStart_toStartOf="@+id/btnCalcular"
            app:layout_constraintEnd_toEndOf="@+id/btnCalcular"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>