<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultadoActivity">

    <TextView
            android:text="@string/calculadora_imc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginTop="24dp"
            android:textSize="30sp" android:gravity="center_horizontal"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fem_ideal"
            android:id="@+id/imvResultado" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/hint_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvResultado"
            app:layout_constraintStart_toEndOf="@+id/imvResultado"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" style="@style/label_formulario"
            app:layout_constraintBottom_toTopOf="@+id/txvMensagemResultado"
            android:textSize="80sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/hint_resultado_mensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvMensagemResultado"
            app:layout_constraintStart_toStartOf="@+id/txvResultado"
            style="@style/label_formulario"
            app:layout_constraintBottom_toTopOf="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:textSize="25sp"
    />
    <TextView
            android:text="@string/desenvolvido_por_rafael"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="32dp"
            style="@style/label_formulario"/>
</androidx.constraintlayout.widget.ConstraintLayout>